--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "firebase": "^4.13.0",
+    "firebaseui": "^2.7.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
