--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@
 .thumbs.db
 node_modules
 /dist
+/public
 /src-cordova/platforms
 /src-cordova/plugins
 /src-cordova/www
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
 
 # Editor directories and files
 .idea
