--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "firebase": "^4.13.0",
     "firebaseui": "^2.7.0",
+    "vue-lodash": "^2.0.0",
     "vuefire": "^1.4.5"
   },
   "devDependencies": {
